--- a/test.ui
+++ b/test.ui
@@ -142,7 +142,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>123456789abcdefg</string>
+     <string>gdxt7Y5YMaoD1eLL</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_2">
